--- a/css/styles.css
+++ b/css/styles.css
@@ -57,11 +57,11 @@ body {
 }
 
 .container {
-     min-width: 288px;
-     margin-left: auto;
-     margin-right: auto;
+    max-width: 320px;
+    margin-left: auto;
+    margin-right: auto;
     padding-left: 16px;
-        padding-right: 16px;
+    padding-right: 16px;
  }
 
 .title {
@@ -94,9 +94,6 @@ body {
 /*=========== /COMMON STYLE ==========*/
 
 /*=========== MOBILE HEADER STYLE ==========*/
-.page-header {
-    padding-top: 16px;
-}
 
 .header-container {
     display: flex;
@@ -175,15 +172,18 @@ body {
         fill: #2E2F42;
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
-    
+    .mobile-menu-navigation {
+        margin-bottom: auto;
+    }
+    .mobile-menu-item:not(:last-child) {
+        margin-bottom: 40px;
+    }
     .mobile-menu-link {
         display: block;
         font-weight: 700;
         font-size: 36px;
         line-height: 1.5;
         letter-spacing: 0.02em;
-        padding-top: 24px;
-        padding-bottom: 24px;
         color: #2E2F42;
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -208,9 +208,12 @@ body {
        font-style: normal;
        color: #434455;
    }
-   .tel {
-        color: #4D5AE5;
+   .menu-list-link-tel {
+    margin-bottom: 24px;
    }
+    .tel {
+        color: #4D5AE5;
+    }
    .mailto {
         color: #434455;
    }
@@ -304,8 +307,8 @@ body {
     display: none;
 }
 .advantages {
-    margin-top: 96px;
-    margin-bottom: 96px;
+    padding-top: 96px;
+    padding-bottom: 96px;
     background-color: #FFFFFF;
 }
 
@@ -416,8 +419,6 @@ body {
 /*=========== MOBILE PORTFOLIO STYLE ==========*/
 .portfolio {
     background-color: #FFFFFF;
-}
-.container-portfolio {
     padding-top: 96px;
     padding-bottom: 96px;
 }
@@ -466,7 +467,7 @@ body {
 
 .overlay-box {
     overflow: hidden;
-    width: 288px;
+    max-width: 288px;
     height: 280px;
     position: relative;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -895,7 +896,7 @@ body {
 
 @media screen and (min-width: 768px) {
     .container {
-        min-width: 736px;
+        max-width: 736px;
     }
 
 /*=========== TABLET HEADER STYLE ==========*/
@@ -988,7 +989,7 @@ body {
     padding-top: 112px;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7),
             rgba(46, 47, 66, 0.7)),
-            url(../images/people-office.jpg);
+            url(../images/tabl/people-office_tabl.jpg);
 }
 .main-title {
     font-size: 56px;
@@ -1089,7 +1090,7 @@ text-align: left;
 
 @media screen and (min-width: 1158px) {
     .container {
-        min-width: 1158px;
+        max-width: 1158px;
         padding: 0 15px;
 
     }
@@ -1106,13 +1107,20 @@ font-size: 16px;
 /*=========== /DESKTOP HEADER STYLE ==========*/
 
 /*=========== DESKTOP HERO STYLE ==========*/
+.solutions {
+    padding-bottom: 188px;
+    padding-top: 188px;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+            rgba(46, 47, 66, 0.7)),
+        url(../images/people-office.jpg);
+}
 
 /*=========== /DESKTOP HERO STYLE ==========*/
 
 /*=========== DESKTOP ADVANTAGES STYLE ==========*/
 .advantages {
-    margin-top: 120px;
-    margin-bottom: 120px;
+    padding-top: 120px;
+    padding-bottom: 120px;
 }
 .adventages-card {
     width: 264px;
@@ -1159,7 +1167,7 @@ font-size: 16px;
 
 /*=========== DESKTOP FOOTER STYLE ==========*/
 .footer {
-    padding: 100px 15px;
+    padding: 100px 0;
     
 }
 .footer-container {
@@ -1174,6 +1182,7 @@ font-size: 16px;
     display: flex;
     flex-direction: column;
     margin-left: 0;
+    margin-bottom: 0;
 }
 .subscribe-container {
     margin-left: 80px;
@@ -1204,7 +1213,17 @@ screen and (min-device-pixel-ratio: 2) and (min-width: 768px) {
     .solutions {
         background-image: linear-gradient(rgba(46, 47, 66, 0.7),
                 rgba(46, 47, 66, 0.7)),
-                url(../images/people-office@2x.jpg);
+                url(../images/tabl/people-office_tabl@2x.jpg);
+    }
+
+}
+@media screen and (min-resolution: 192dpi) and (min-width: 1158px),
+screen and (min-resolution: 2dppx) and (min-width: 1158px),
+screen and (min-device-pixel-ratio: 2) and (min-width: 1158px) {
+    .solutions {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+                rgba(46, 47, 66, 0.7)),
+            url(../images/people-office@2x.jpg);
     }
 
 }
